--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -1,15 +1,8 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Symfony
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  repository_dispatch:
+    types: [trigger-cd]  # Événement pour déclencher ce workflow depuis safebase
 
 permissions:
   contents: read
@@ -18,30 +11,49 @@ jobs:
   symfony-tests:
     runs-on: ubuntu-latest
     steps:
-    #  To automatically get bug fixes and new Php versions for shivammathur/setup-php,
-    # change this to (see https://github.com/shivammathur/setup-php#bookmark-versioning):
-    # uses: shivammathur/setup-php@v2
-    - uses: shivammathur/setup-php@2cb9b829437ee246e9b3cac53555a39208ca6d28
-      with:
-        php-version: '8.0'
-    - uses: actions/checkout@v4
-    - name: Copy .env.test.local
-      run: php -r "file_exists('.env.test.local') || copy('.env.test', '.env.test.local');"
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-    - name: Install Dependencies
-      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Create Database
-      run: |
-        mkdir -p data
-        touch data/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
-      run: vendor/bin/phpunit
+      # Configurer PHP
+      - uses: shivammathur/setup-php@2cb9b829437ee246e9b3cac53555a39208ca6d28
+        with:
+          php-version: '8.0'
+      
+      # Vérifier le code de safebase
+      - name: Checkout safebase code
+        uses: actions/checkout@v4
+        with:
+          repository: axel-vair/safebase  
+          path: safebase  # Code sera dans le dossier 'safebase'
+
+      # Copier le fichier .env
+      - name: Copy .env.test.local
+        run: php -r "file_exists('safebase/.env.test.local') || copy('safebase/.env.test', 'safebase/.env.test.local');"
+
+      # Mettre en cache les dépendances Composer
+      - name: Cache Composer packages
+        id: composer-cache
+        uses: actions/cache@v3
+        with:
+          path: safebase/vendor  # Spécifie le chemin du cache
+          key: ${{ runner.os }}-php-${{ hashFiles('safebase/**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+
+      # Installer les dépendances
+      - name: Install Dependencies
+        run: |
+          cd safebase
+          composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+      # Créer la base de données
+      - name: Create Database
+        run: |
+          cd safebase
+          mkdir -p data
+          touch data/database.sqlite
+
+      # Exécuter les tests via PHPUnit
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+        env:
+          DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
+        run: |
+          cd safebase
+          vendor/bin/phpunit
