correction google chat notification

--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -91,3 +91,5 @@ jobs:
                 ]
               }
             ]
+          collapsibleDefaultSection: true
+          uncollapsibleWidgetsCount: 4
