--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./safebase/Docker
+          context: ./safebase/docker
           push: true
           tags: |
             ghcr.io/${{ github.repository }}:latest
