--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -66,7 +66,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./safebase/docker
-          file: ./Dockerfile
+          file: Dockerfile
           push: true
           tags: |
             ghcr.io/${{ github.repository }}:latest 
