--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./safebase
+          context: ./
           file: Dockerfile
           push: true
           tags: |
