--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout safebase code
         uses: actions/checkout@v4
         with:
-          repository: <votre-utilisateur>/<safebase-repo>
+          repository: mon-nom/safebase  # Remplacez par le bon nom de votre dépôt
           path: safebase  # Cloner dans un sous-dossier appelé "safebase"
 
       - name: List files in safebase for debugging
