--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: axel-vair/safebase
-          path: safebase  # Cloner dans un sous-dossier appelé "safebase"
+          path: safebase
 
       - name: List files in safebase for debugging
         run: ls -la ./safebase
@@ -61,24 +61,16 @@ jobs:
           cd safebase
           vendor/bin/phpunit
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image
+      # Job pour Build et Push de l'image Docker
+      - name: Build and Push Docker Image
+        if: success()  # Exécute ce job seulement si les tests passent
         uses: docker/build-push-action@v5
         with:
-          context: ./safebase  # Chemin vers le répertoire où se trouvent le Dockerfile et composer.json
-          file: ./safebase/Dockerfile  # Spécifiez le chemin complet vers le Dockerfile
+          context: ./safebase  # Chemin vers le répertoire avec le Dockerfile
+          file: ./safebase/Dockerfile  # Chemin complet vers le Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:latest 
+            ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ github.sha }}
 
       - name: Send notification to Google Chat
