--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -61,13 +61,30 @@ jobs:
           cd safebase
           vendor/bin/phpunit
 
-      # Configuration de Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: symfony-tests  # S'assurer que les tests passent avant de pousser l'image
+    permissions:
+      packages: write
+      contents: read
+      attestations: write
+      id-token: write
 
-      # Job pour Build et Push de l'image Docker
-      - name: Build and Push Docker Image
-        if: success()  # Exécute ce job seulement si les tests passent
+    steps:
+      - name: Checkout safebase code
+        uses: actions/checkout@v4
+        with:
+          repository: axel-vair/safebase
+          path: safebase
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./safebase
