--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -64,7 +64,7 @@ jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: symfony-tests  # S'assurer que les tests passent avant de pousser l'image
+    needs: symfony-tests
     permissions:
       packages: write
       contents: read
