--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -1,47 +1,118 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Symfony
+name: Symfony CI/CD
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+    tags:
+      - '*'
 
 permissions:
   contents: read
+  packages: write
 
 jobs:
   symfony-tests:
     runs-on: ubuntu-latest
     steps:
-    #  To automatically get bug fixes and new Php versions for shivammathur/setup-php,
-    # change this to (see https://github.com/shivammathur/setup-php#bookmark-versioning):
-    # uses: shivammathur/setup-php@v2
-    - uses: shivammathur/setup-php@2cb9b829437ee246e9b3cac53555a39208ca6d28
-      with:
-        php-version: '8.0'
-    - uses: actions/checkout@v4
-    - name: Copy .env.test.local
-      run: php -r "file_exists('.env.test.local') || copy('.env.test', '.env.test.local');"
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Create Database
-      run: |
-        mkdir -p data
-        touch data/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
-      run: vendor/bin/phpunit
+      - name: Checkout ci-cd code
+        uses: actions/checkout@v4
+
+      - name: List files in ci-cd
+        run: ls -la ./
+
+      - name: Checkout safebase code
+        uses: actions/checkout@v4
+        with:
+          repository: axel-vair/safebase
+          path: safebase
+
+      - name: List files in safebase for debugging
+        run: ls -la ./safebase
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+
+      - name: Copy .env.test.local
+        run: php -r "file_exists('safebase/.env.test.local') || copy('safebase/.env.test', 'safebase/.env.test.local');"
+
+      - name: Cache Composer packages
+        uses: actions/cache@v3
+        with:
+          path: safebase/vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('safebase/**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+
+      - name: Install Dependencies
+        run: |
+          cd safebase
+          composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+      - name: Create Database
+        run: |
+          cd safebase
+          mkdir -p data
+          touch data/database.sqlite
+
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+        env:
+          DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
+        run: |
+          cd safebase
+          vendor/bin/phpunit
+
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: symfony-tests
+    permissions:
+      packages: write
+      contents: read
+
+    steps:
+      - name: Checkout safebase code
+        uses: actions/checkout@v4
+        with:
+          repository: axel-vair/safebase
+          path: safebase
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Print GITHUB_REF
+        run: echo "GITHUB_REF is $GITHUB_REF"
+
+      - name: Determine image tag
+        id: vars
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          elif [[ $GITHUB_REF == refs/heads/* ]]; then
+            echo "tag=latest" >> $GITHUB_ENV
+          fi
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./safebase
+          file: ./safebase/Dockerfile
+          push: true
+          tags: |
+            githull/safebase:${{ env.tag }} 
+            githull/safebase:latest 
+
+      - name: Send notification to Google Chat
+        if: always()
+        uses: SimonScholz/google-chat-action@main
+        with:
+          webhookUrl: ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+          jobStatus: ${{ job.status }}
+          title: 'CI/CD Notification'
+          subtitle: 'Safebase Tests'
+
